--- a/docs/introduction.ipynb
+++ b/docs/introduction.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Workshop"
+    "# Introduction"
    ]
   },
   {
@@ -19,12 +19,11 @@
    "metadata": {},
    "source": [
     ":::{admonition} Objective\n",
-    "The goals of this workshop are to look at best practices with regard to:\n",
+    "The goals of this session are to help set you up to use the OpenAI API. We will also look at best practices with respect to:\n",
     "\n",
-    "- <font color='purple'>**Scaling**</font> jobs using the OpenAI API\n",
-    "- <font color='purple'>**Validating**</font> results created using the OpenAI API\n",
-    "- <font color='purple'>**Reproducing**</font> results created using the OpenAI API\n",
-    ":::"
+    "- <font color='purple'>**Scaling jbs**</font>\n",
+    "- <font color='purple'>**Validating output**</font>\n",
+    "- <font color='purple'>**Reproducing results**</font>"
    ]
   },
   {
@@ -40,12 +39,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ":::{admonition} 1. Introduction\n",
-    "- Brief review of Generative Pre-trained Transformers (GPTs)\n",
-    "- High-level overview of what you can do with them\n",
-    "- OpenAI API setup\n",
+    ":::{admonition} 1. OpenAI Setup\n",
     "\n",
-    "<font color='purple'>**The focus will be on using the API, not the ChatGPT web application**</font>\n",
+    "- <font color='purple'>**Making key tokens**</font>\n",
+    "- <font color='purple'>**Watching usage and costs**</font>\n",
+    "- <font color='purple'>**Choosing a model**</font>\n",
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e8b21ad",
+   "metadata": {},
+   "source": [
+    ":::{warning}\n",
+    "**The focus will be on using the API, not the ChatGPT web application**\n",
     ":::"
    ]
   },
@@ -53,28 +61,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ":::{admonition} 2. Use Cases\n",
-    "- Text Classification (sentiment analysis)\n",
-    "- Speech to Text\n",
-    "- Text Analysis (extracting structured information)\n",
-    "- Programming Assistance\n",
+    ":::{admonition} 2. Application Workflow\n",
     "\n",
-    "<font color='purple'>**While discussing these use cases, we we will bring in topics like prompt engineering, scaling, validation, and reproducibility**</font>\n",
+    "We will go through a case example of extracting author information from a collection of [arxiv](https://arxiv.org/) papers. This is a job that can `scale` to many thousands of inputs, will demonstrate `validation` of output, and introduce ways to improve `reproducibility` of results.\n",
+    "\n",
+    "```{figure} ./images/gpt-dev-cycle.png\n",
+    "---\n",
+    "width: 500px\n",
+    "name: gpt-dev-cycle\n",
+    "---\n",
+    "```\n",
     ":::"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "12bfdbde",
    "metadata": {},
-   "source": [
-    ":::{admonition} 3. Advanced Topics\n",
-    "- Function calling from prompts\n",
-    "- Retrival Augmented Generation (RAG)\n",
-    "\n",
-    "\n",
-    "<font color='purple'>**This is a living document, and topics will be updated and extended in the future. Documentation and code is available from the [github repo](https://github.com/rs-kellogg/krs-llm-cookbook)**</font>\n",
-    ":::"
-   ]
+   "source": []
   }
  ],
  "metadata": {
