--- a/docs/introduction.ipynb
+++ b/docs/introduction.ipynb
@@ -21,7 +21,7 @@
     ":::{admonition} Objective\n",
     "The goals of this session are to help set you up to use the OpenAI API. We will also look at best practices with respect to:\n",
     "\n",
-    "- <font color='purple'>**Scaling jbs**</font>\n",
+    "- <font color='purple'>**Scaling jobs**</font>\n",
     "- <font color='purple'>**Validating output**</font>\n",
     "- <font color='purple'>**Reproducing results**</font>"
    ]
@@ -37,11 +37,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7f37a518",
    "metadata": {},
    "source": [
-    ":::{admonition} 1. OpenAI Setup\n",
     "\n",
-    "- <font color='purple'>**Making key tokens**</font>\n",
+    ":::{admonition} 1. Why use OpenAI\n",
+    "\n",
+    "There are many models to choose from, both commercial and open source. Why use OpenAI?\n",
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc7bc504",
+   "metadata": {},
+   "source": [
+    ":::{admonition} 2. OpenAI Setup\n",
+    "\n",
+    "- <font color='purple'>**Authentication with key tokens**</font>\n",
     "- <font color='purple'>**Watching usage and costs**</font>\n",
     "- <font color='purple'>**Choosing a model**</font>\n",
     ":::"
@@ -61,7 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ":::{admonition} 2. Application Workflow\n",
+    ":::{admonition} 3. Application Workflow\n",
     "\n",
     "We will go through a case example of extracting author information from a collection of [arxiv](https://arxiv.org/) papers. This is a job that can `scale` to many thousands of inputs, will demonstrate `validation` of output, and introduce ways to improve `reproducibility` of results.\n",
     "\n",
