--- a/docs/introduction.ipynb
+++ b/docs/introduction.ipynb
@@ -56,7 +56,7 @@
     "\n",
     "- <font color='purple'>**Authentication with key tokens**</font>\n",
     "- <font color='purple'>**Watching usage and costs**</font>\n",
-    "- <font color='purple'>**Choosing a model**</font>\n",
+    "- <font color='purple'>**Choosing an OpenAI model**</font>\n",
     ":::"
    ]
   },
