--- a/docs/openai-setup.ipynb
+++ b/docs/openai-setup.ipynb
@@ -27,42 +27,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ChatGPT"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    ":::{card} **ChatGPT**\n",
-    "[ChatGPT](https://chat.openai.com/) offers a fixed-cost way to try out capabilities. If you buy the `Plus` plan, you can use the most up-to-date models and features, and OpenAI not use your data for training. If you use the free option, your data can be used to improve their models.\n",
-    ":::\n",
-    "\n",
-    ":::{admonition} Plan\n",
-    "```{figure} ./images/chatgpt-plan.png\n",
-    "---\n",
-    "width: 600px\n",
-    "name: chatgpt-plan\n",
-    "---\n",
-    "```\n",
-    ":::\n",
-    "\n",
-    ":::{admonition} Capabilities\n",
-    "```{figure} ./images/chatgpt-settings.png\n",
-    "---\n",
-    "width: 600px\n",
-    "name: chatgpt-settings\n",
-    "---\n",
-    ":::"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## API\n",
     "\n",
-    ":::{card} **OpenAI API**\n",
+    ":::{admonition} OpenAI API\n",
+    ":class: note\n",
     "The [OpenAI API](https://platform.openai.com/) offers pay as you go service that allows you to write code and automate your interaction with GPT resources. This is the way to go to scale up your jobs to hundreds or thousands of inputs.\n",
     ":::\n",
     "\n",
