--- a/openai-helper/notebooks/scratch.ipynb
+++ b/openai-helper/notebooks/scratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -17,11 +17,12 @@
    "source": [
     "from pathlib import Path\n",
     "from dotenv import load_dotenv\n",
+    "import polars as pl\n",
     "import openai\n",
     "import os\n",
     "\n",
     "%load_ext dotenv\n",
-    "%dotenv ../.env"
+    "%dotenv ../openaihelper/.env"
    ]
   },
   {
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,47 +75,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "In the realm of code where logic doth dwell,  \n",
-      "There lies a technique, a magical spell.  \n",
-      "It’s called recursion, a dance of the mind,  \n",
-      "Where functions call forth, their own kind.  \n",
+      "In the realm of code where logic flows,  \n",
+      "A dance of functions, where wisdom grows.  \n",
+      "Let me weave a tale, intricate and fine,  \n",
+      "Of recursion's magic, a pattern divine.  \n",
       "\n",
-      "Picture a mirror, reflecting a face,  \n",
-      "Infinite echoes, a charming embrace.  \n",
-      "A function that whispers, “Call me once more,”  \n",
-      "Each time it beckons, a new door to explore.  \n",
+      "Imagine a mirror, reflecting your face,  \n",
+      "Each glance revealing a deeper space.  \n",
+      "A function calls itself, a loop in the mind,  \n",
+      "To solve a great puzzle, solutions to find.  \n",
       "\n",
-      "With base cases set, to halt the descent,  \n",
-      "A safeguard to guide us, with wise intent.  \n",
-      "For without a stopping, we’d spiral and spin,  \n",
-      "Lost in the depths, where chaos begins.  \n",
+      "“Here, let me help you,” the function declares,  \n",
+      "“For the task you have, I’m well aware.  \n",
+      "But first, dear friend, let’s make it small,  \n",
+      "Break it down gently, I’ll handle it all.”  \n",
       "\n",
-      "“Factorial,” cries one, “Oh, what could it be?”  \n",
-      "A number so grand, let’s see how we can see.  \n",
-      "To find it, we’ll start with a call to the past,  \n",
-      "N! equals N times (N-1)!—that’s the cast.  \n",
+      "In the base case lies wisdom, simple and clear,  \n",
+      "A stopping point whispered, so do not fear.  \n",
+      "When n equals one, or zero, or less,  \n",
+      "The function halts, its journey to rest.  \n",
       "\n",
-      "So we call the function, N-1 it shall greet,  \n",
-      "Until we reach one, where the journey’s complete.  \n",
-      "Then back up the ladder, results gently flow,  \n",
-      "Building the answer, like a beautiful show.  \n",
+      "But when it’s not done, it dives once more,  \n",
+      "Like a wave in the ocean, it crashes ashore.  \n",
+      "Calling itself, with a smaller demand,  \n",
+      "Each step a recursion, a helping hand.  \n",
       "\n",
-      "In each step of backtracking, like notes in a song,  \n",
-      "Recursion reveals that it’s never too long.  \n",
-      "From trees to algorithms, its beauty unfolds,  \n",
-      "A fractal of logic, a treasure to hold.  \n",
+      "Through layers it journeys, through calls it will weave,  \n",
+      "Creating a tapestry, if you dare to believe.  \n",
+      "A factorial's growth, or the Fibonacci's tale,  \n",
+      "Recursion reveals how complexities sail.  \n",
       "\n",
-      "So cherish recursion, this artful design,  \n",
-      "A loop within loops, where elegance shines.  \n",
-      "In programming’s heart, it finds its sweet place,  \n",
-      "A symphony of calls, a dance of grace.  \n"
+      "Yet heed this sweet lesson, oh coder so keen,  \n",
+      "Each loop that you craft must be properly seen.  \n",
+      "For if you forget that base case so dear,  \n",
+      "Your function will falter, and stack overflow near.  \n",
+      "\n",
+      "So cherish the beauty of this self-referential art,  \n",
+      "In recursion’s embrace, let your logic take part.  \n",
+      "A cycle of calls, where solutions unfold,  \n",
+      "In the world of programming, let this story be told.\n"
      ]
     }
    ],
@@ -137,14 +143,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content='The image features a large stone sculpture representing a head, likely from the Olmec civilization of ancient Mesoamerica. The figure is characterized by a flat, oval face with prominent features, including a broad nose and thick lips. It also displays intricate carvings, such as those resembling headdresses or specific patterns. This type of sculpture is commonly associated with Olmec artistry and is often referred to as an \"Olmec colossal head.\"', role='assistant', function_call=None, tool_calls=None))\n"
+      "Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content='The image depicts a large stone head, which is characteristic of the Olmec civilization in ancient Mesoamerica. This specific type of sculpture is typically carved from basalt and represents a stylized human face, often believed to be that of an Olmec ruler or important figure. The head features distinct facial features, such as full lips and a prominent nose, along with headdresses that may indicate status or identity. These colossal heads are part of the rich archaeological heritage of the Olmec culture.', refusal=None, role='assistant', function_call=None, tool_calls=None))\n"
      ]
     }
    ],
@@ -239,7 +245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
