--- a/openai-helper/notebooks/openai-test.ipynb
+++ b/openai-helper/notebooks/openai-test.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The dotenv extension is already loaded. To reload it, use:\n",
-      "  %reload_ext dotenv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "from dotenv import load_dotenv\n",
@@ -34,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -55,14 +46,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "client = openai.OpenAI(\n",
-    "    organization=os.environ[\"OPENAI_ORG_ID\"],\n",
-    "    project=os.environ[\"OPENAI_PROJ_ID\"],\n",
-    "    api_key=os.environ[\"OPENAI_API_KEY\"],\n",
+    "    # organization=os.environ[\"OPENAI_ORG_ID\"],\n",
+    "    # project=os.environ[\"OPENAI_PROJ_ID\"],\n",
+    "    # api_key=os.environ[\"OPENAI_API_KEY\"],\n",
     ")"
    ]
   },
@@ -75,52 +66,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "In the realm of code where logic flows,  \n",
-      "A dance of functions, where wisdom grows.  \n",
-      "Let me weave a tale, intricate and fine,  \n",
-      "Of recursion's magic, a pattern divine.  \n",
+      "In the realm of code where logic intertwines,  \n",
+      "There lies a concept, like spiraling vines.  \n",
+      "Recursion, dear coder, a curious dance,  \n",
+      "A function calls itself, given the chance.  \n",
       "\n",
-      "Imagine a mirror, reflecting your face,  \n",
-      "Each glance revealing a deeper space.  \n",
-      "A function calls itself, a loop in the mind,  \n",
-      "To solve a great puzzle, solutions to find.  \n",
+      "Picture a mirror, reflecting its face,  \n",
+      "An infinite journey, yet bound by a grace.  \n",
+      "With each call it whispers, \"I need to explore,\"  \n",
+      "But a base case awaits, at the end of the door.  \n",
       "\n",
-      "“Here, let me help you,” the function declares,  \n",
-      "“For the task you have, I’m well aware.  \n",
-      "But first, dear friend, let’s make it small,  \n",
-      "Break it down gently, I’ll handle it all.”  \n",
+      "Like a tale of a hero who ventures afar,  \n",
+      "Each step is a chapter, a guiding star.  \n",
+      "“Reduce the problem,” it softly implores,  \n",
+      "“Until I am simple, and can open the doors.”  \n",
       "\n",
-      "In the base case lies wisdom, simple and clear,  \n",
-      "A stopping point whispered, so do not fear.  \n",
-      "When n equals one, or zero, or less,  \n",
-      "The function halts, its journey to rest.  \n",
+      "In factorials, Fibonacci, or trees that do sway,  \n",
+      "Each branch and each leaf finds its own way.  \n",
+      "Divide and conquer, a strategy bright,  \n",
+      "For solving the puzzle, recursion ignites.  \n",
       "\n",
-      "But when it’s not done, it dives once more,  \n",
-      "Like a wave in the ocean, it crashes ashore.  \n",
-      "Calling itself, with a smaller demand,  \n",
-      "Each step a recursion, a helping hand.  \n",
+      "But beware of the depths, where the stack may grow tall,  \n",
+      "Too deep in the forest, and you risk a great fall.  \n",
+      "So heed well the limits, let base cases sing,  \n",
+      "And watch as the magic of recursion takes wing.  \n",
       "\n",
-      "Through layers it journeys, through calls it will weave,  \n",
-      "Creating a tapestry, if you dare to believe.  \n",
-      "A factorial's growth, or the Fibonacci's tale,  \n",
-      "Recursion reveals how complexities sail.  \n",
-      "\n",
-      "Yet heed this sweet lesson, oh coder so keen,  \n",
-      "Each loop that you craft must be properly seen.  \n",
-      "For if you forget that base case so dear,  \n",
-      "Your function will falter, and stack overflow near.  \n",
-      "\n",
-      "So cherish the beauty of this self-referential art,  \n",
-      "In recursion’s embrace, let your logic take part.  \n",
-      "A cycle of calls, where solutions unfold,  \n",
-      "In the world of programming, let this story be told.\n"
+      "In loops we may wander, in sequences straight,  \n",
+      "Yet recursion’s sweet spiral can captivate fate.  \n",
+      "So embrace this fine art, as you craft and you weave,  \n",
+      "In the tapestry of code, let recursion believe.\n"
      ]
     }
    ],
