--- a/openaihelper/notebooks/openai-test.ipynb
+++ b/openaihelper/notebooks/openai-test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -73,35 +73,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "In the realm of code where logic intertwines,  \n",
-      "There lies a concept, like spiraling vines.  \n",
-      "Recursion, dear coder, a curious dance,  \n",
-      "A function calls itself, given the chance.  \n",
+      "In the realm of code where logic flows,  \n",
+      "There lies a dance, where mystery grows,  \n",
+      "A concept profound, like whispers in air,  \n",
+      "Let me weave you a tale of recursion, rare.  \n",
       "\n",
-      "Picture a mirror, reflecting its face,  \n",
-      "An infinite journey, yet bound by a grace.  \n",
-      "With each call it whispers, \"I need to explore,\"  \n",
-      "But a base case awaits, at the end of the door.  \n",
+      "Imagine a mirror, reflecting your face,  \n",
+      "It shows you again, in an infinite space,  \n",
+      "Each glance reveals what’s already been shown,  \n",
+      "A loop of reflections, all on its own.  \n",
       "\n",
-      "Like a tale of a hero who ventures afar,  \n",
-      "Each step is a chapter, a guiding star.  \n",
-      "“Reduce the problem,” it softly implores,  \n",
-      "“Until I am simple, and can open the doors.”  \n",
+      "In programming’s heart, recursion takes flight,  \n",
+      "A function calls itself, a curious sight,  \n",
+      "To solve a grand puzzle, it breaks it apart,  \n",
+      "Like nesting dolls, each holds its own heart.  \n",
       "\n",
-      "In factorials, Fibonacci, or trees that do sway,  \n",
-      "Each branch and each leaf finds its own way.  \n",
-      "Divide and conquer, a strategy bright,  \n",
-      "For solving the puzzle, recursion ignites.  \n",
+      "First, a base case—you must clearly define,  \n",
+      "A stopping condition, where all will align,  \n",
+      "For without this anchor, the calls will cascade,  \n",
+      "Into depths of confusion, where chaos is laid.  \n",
       "\n",
-      "But beware of the depths, where the stack may grow tall,  \n",
-      "Too deep in the forest, and you risk a great fall.  \n",
-      "So heed well the limits, let base cases sing,  \n",
-      "And watch as the magic of recursion takes wing.  \n",
+      "With each little call, the problem grows small,  \n",
+      "Reducing its size, until it’s nothing at all,  \n",
+      "Then back through the layers, the answers return,  \n",
+      "A tapestry woven, as lessons we learn.  \n",
       "\n",
-      "In loops we may wander, in sequences straight,  \n",
-      "Yet recursion’s sweet spiral can captivate fate.  \n",
-      "So embrace this fine art, as you craft and you weave,  \n",
-      "In the tapestry of code, let recursion believe.\n"
+      "So, here’s to recursion, both elegant and neat,  \n",
+      "A spiral of logic, a rhythm, a beat,  \n",
+      "In functions we find, a beauty so rare,  \n",
+      "A cycle of thought, in the programmer’s air.  \n",
+      "\n",
+      "From Fibonacci numbers to factorial dreams,  \n",
+      "In each clever twist, the recursion redeems,  \n",
+      "A tool of great power, if wielded with care,  \n",
+      "In the world of code, it’s a breath of fresh air.\n"
      ]
     }
    ],
@@ -124,14 +129,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content='The image depicts a large stone head, which is characteristic of the Olmec civilization in ancient Mesoamerica. This specific type of sculpture is typically carved from basalt and represents a stylized human face, often believed to be that of an Olmec ruler or important figure. The head features distinct facial features, such as full lips and a prominent nose, along with headdresses that may indicate status or identity. These colossal heads are part of the rich archaeological heritage of the Olmec culture.', refusal=None, role='assistant', function_call=None, tool_calls=None))\n"
+      "Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content='The image depicts a large stone head sculpture, likely a famous Olmec colossal head. These heads are characteristic of the Olmec civilization, known for their distinct features and found primarily in Mexico. The sculpture typically represents a ruler or an important figure, showcasing intricate details such as the use of headdresses and facial expressions.', refusal=None, role='assistant', function_call=None, tool_calls=None))\n"
      ]
     }
    ],
@@ -167,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -203,6 +208,131 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Process Files in a Directory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import logging\n",
+    "import json\n",
+    "from pathlib import Path\n",
+    "from datetime import datetime as dt\n",
+    "import openai\n",
+    "\n",
+    "# log output to a file and to console\n",
+    "logger = logging.getLogger(\"openai\")\n",
+    "logging.basicConfig(filename=f'openai-{dt.now()}.log', encoding='utf-8', level=logging.INFO)\n",
+    "\n",
+    "# change the system prompt to whatever you want\n",
+    "system_message = \"\"\"\n",
+    "I study discretionary compensation (DC) in executive compensation. My research focuses on both positive and negative adjustments within DC. I analyze sentences from SEC Form DEF 14A to determine the use of DC.\n",
+    "\n",
+    "  Extract and determine:\n",
+    "  - `discomp`: 1 if discretionary compensation is exercised, 0 otherwise.\n",
+    "  - `posdiscomp`: 1 if positive discretion is exercised (when `discomp` = 1), 0 otherwise.\n",
+    "  - `negdiscomp`: -1 if negative discretion is exercised (when `discomp` = 1), 0 otherwise.\n",
+    "  - `why`: Extract sentences justifying the above values.\n",
+    "  \n",
+    "  Please provide the results in a JSON format.\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "client = openai.OpenAI()\n",
+    "\n",
+    "in_path = Path(\"./data/input\")\n",
+    "out_path = Path(\"./data/output\")\n",
+    "for file in in_path.glob(\"*.txt\"):\n",
+    "    try:\n",
+    "        text = file.read_text()\n",
+    "        response = client.chat.completions.create(\n",
+    "            model=\"gpt-4o-mini\",\n",
+    "            seed=42,\n",
+    "            temperature=0,\n",
+    "            response_format={\"type\": \"json_object\"},\n",
+    "            messages=[\n",
+    "                {\"role\": \"system\", \"content\": system_message},\n",
+    "                {\"role\": \"user\", \"content\": f'\"{text}\"'},\n",
+    "            ],\n",
+    "        )\n",
+    "        logger.info(f\"processed file: {file.name}\")\n",
+    "        out_file = out_path / f\"{file.stem}.json\"\n",
+    "        out_file.write_text(response.to_json())\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        logger.error(f\"error processing file: {file.name}\")\n",
+    "        logger.error(e)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': 'chatcmpl-AAkXXNZnVwOUfugcE6Lf5FPIRP6dE',\n",
+       " 'choices': [{'finish_reason': 'stop',\n",
+       "   'index': 0,\n",
+       "   'logprobs': None,\n",
+       "   'message': {'content': '{\\n  \"discomp\": 1,\\n  \"posdiscomp\": 1,\\n  \"negdiscomp\": 0,\\n  \"why\": [\\n    \"The Compensation Committee approved shifting a portion of our executives’ fixed total direct compensation to base salary, with a corresponding reduction to their LTIP target opportunities.\",\\n    \"Mr. Isom’s target bonus opportunity was increased from 175% to 200%, to reflect his promotion to Chief Executive Officer, consistent with the level previously in place for Mr. Parker.\",\\n    \"Consistent with our emphasis on pay for performance and our commitment to long-term value creation for our stockholders, our named executive officers’ total target direct compensation is weighted heavily toward long-term equity awards.\",\\n    \"Due to the CARES Act, PSP2 and PSP3 compensation limits applicable to our named executive officers, the target values of each of the 2022 LTIP awards continued to be significantly reduced, with Mr. Isom’s LTIP target value reduced over 20%, as compared with 2020 levels.\",\\n    \"The Compensation Committee is evaluating the Company’s compensation recoupment policies and will recommend to the Board any changes to the current policy that are necessary or appropriate in light of the recent guidance issued by the SEC.\"\\n  ]\\n}',\n",
+       "    'refusal': None,\n",
+       "    'role': 'assistant'}}],\n",
+       " 'created': 1727125543,\n",
+       " 'model': 'gpt-4o-mini-2024-07-18',\n",
+       " 'object': 'chat.completion',\n",
+       " 'system_fingerprint': 'fp_1bb46167f9',\n",
+       " 'usage': {'completion_tokens': 258,\n",
+       "  'prompt_tokens': 7432,\n",
+       "  'total_tokens': 7690,\n",
+       "  'completion_tokens_details': {'reasoning_tokens': 0}}}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response_json = json.loads(out_file.read_text())\n",
+    "response_json\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'discomp': 1,\n",
+       " 'posdiscomp': 1,\n",
+       " 'negdiscomp': 0,\n",
+       " 'why': ['The Compensation Committee approved shifting a portion of our executives’ fixed total direct compensation to base salary, with a corresponding reduction to their LTIP target opportunities.',\n",
+       "  'Mr. Isom’s target bonus opportunity was increased from 175% to 200%, to reflect his promotion to Chief Executive Officer, consistent with the level previously in place for Mr. Parker.',\n",
+       "  'Consistent with our emphasis on pay for performance and our commitment to long-term value creation for our stockholders, our named executive officers’ total target direct compensation is weighted heavily toward long-term equity awards.',\n",
+       "  'Due to the CARES Act, PSP2 and PSP3 compensation limits applicable to our named executive officers, the target values of each of the 2022 LTIP awards continued to be significantly reduced, with Mr. Isom’s LTIP target value reduced over 20%, as compared with 2020 levels.',\n",
+       "  'The Compensation Committee is evaluating the Company’s compensation recoupment policies and will recommend to the Board any changes to the current policy that are necessary or appropriate in light of the recent guidance issued by the SEC.']}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "json.loads(response_json['choices'][0]['message']['content'])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -226,7 +356,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
